--- a/src/pages/competitor/competitor.css
+++ b/src/pages/competitor/competitor.css
@@ -10,7 +10,7 @@
   grid-template-columns: 68% 31%;
   justify-content: space-between;
   gap: 1rem;
-  padding: 13px;
+  /* padding: 13px; */
   border-radius: 8px;
   width: 76%;
 }
@@ -51,7 +51,16 @@ h1 {
 .competitive {
   background: #e9e9e9;
   padding: 20px 20px;
+  margin: 12px;
   border-radius: 12px;
+}
+
+.market-share{
+  margin: 12px;
+}
+
+.market-price{
+  margin: 12px;
 }
 
 .Grid-socio {
